--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,13 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
 /tmp
+.DS_Store
+.idea/
+test/
+.env
+doc/
+public/assets/
