--- a/config/database.yml
+++ b/config/database.yml
@@ -27,9 +27,21 @@ test:
 production:
   <<: *default
 
-  adapter: postgresql
+#  adapter: mysql2
+#  username: byebuying_users
+#  password: byebuying123
+#  database: ByeBuying_production
+
+#  adapter: postgresql
+#  username: <%= ENV['BYEBUYING_DATABASE_USERNAME'] %>
+#  password: <%= ENV['BYEBUYING_DATABASE_PASSWORD'] %>
+#  database: dbbqf5od66gi23
+#  port: 5432
+#  host: ec2-54-243-217-22.compute-1.amazonaws.com
+
+adapter: postgresql
   username: <%= ENV['BYEBUYING_DATABASE_USERNAME'] %>
   password: <%= ENV['BYEBUYING_DATABASE_PASSWORD'] %>
   database: dbbqf5od66gi23
   port: 5432
-  host: ec2-54-243-217-22.compute-1.amazonaws.com
+  host: ec2-54-163-249-150.compute-1.amazonaws.com
